--- a/src/BelvedereCore.Bindings.Droid/BelvedereCore.Bindings.Droid.csproj
+++ b/src/BelvedereCore.Bindings.Droid/BelvedereCore.Bindings.Droid.csproj
@@ -58,6 +58,11 @@
   <ItemGroup>
     <LibraryProjectZip Include="Jars\belvedere-core-3.0.0-RC.aar" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Xamarin.AndroidX.Fragment">
+      <Version>1.2.5.5</Version>
+    </PackageReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
