--- a/src/ConfigurationSDK.Bindings.Droid/ConfigurationSDK.Bindings.Droid.csproj
+++ b/src/ConfigurationSDK.Bindings.Droid/ConfigurationSDK.Bindings.Droid.csproj
@@ -58,6 +58,12 @@
   <ItemGroup>
     <LibraryProjectZip Include="Jars\sdk-configurations-2.0.0.aar" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\JavaCommon.Bindings.Droid\JavaCommon.Bindings.Droid.csproj">
+      <Project>{11F3D9FA-1CF7-4B14-8888-9D531355280C}</Project>
+      <Name>JavaCommon.Bindings.Droid</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
