--- a/SampleApp/SampleApp.csproj
+++ b/SampleApp/SampleApp.csproj
@@ -36,6 +36,7 @@
     <AndroidUseSharedRuntime>True</AndroidUseSharedRuntime>
     <AndroidLinkMode>None</AndroidLinkMode>
     <EmbedAssembliesIntoApk>False</EmbedAssembliesIntoApk>
+    <AndroidSupportedAbis>armeabi-v7a;x86;arm64-v8a;x86_64</AndroidSupportedAbis>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
@@ -47,7 +48,7 @@
     <WarningLevel>4</WarningLevel>
     <AndroidManagedSymbols>true</AndroidManagedSymbols>
     <AndroidUseSharedRuntime>False</AndroidUseSharedRuntime>
-    <AndroidLinkMode>SdkOnly</AndroidLinkMode>
+    <AndroidLinkMode>None</AndroidLinkMode>
     <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
   </PropertyGroup>
   <ItemGroup>
@@ -104,23 +105,12 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.3.0" />
-    <PackageReference Include="Xamarin.Google.Android.Material" Version="1.3.0.1" />
+    <PackageReference Include="Xamarin.Google.Android.Material" Version="1.2.1.1" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
-    <PackageReference Include="Xamarin.AndroidX.ExifInterface">
-      <Version>1.3.2.2</Version>
-    </PackageReference>
     <PackageReference Include="Xamarin.Google.Dagger">
       <Version>2.37.0</Version>
     </PackageReference>
-    <PackageReference Include="Square.OkHttp3.LoggingInterceptor">
-      <Version>4.4.1</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.Kotlin.StdLib">
-      <Version>1.5.10</Version>
-    </PackageReference>
-    <PackageReference Include="Square.Retrofit2.ConverterGson">
-      <Version>2.5.0</Version>
-    </PackageReference>
+    <PackageReference Include="Xamarin.Kotlin.StdLib" Version="1.3.61" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\src\SupportSDK.Bindings.Droid\SupportSDK.Bindings.Droid.csproj">
