--- a/src/Belvedere.Bindings.Droid/Belvedere.Bindings.Droid.csproj
+++ b/src/Belvedere.Bindings.Droid/Belvedere.Bindings.Droid.csproj
@@ -59,14 +59,14 @@
     <LibraryProjectZip Include="Jars\belvedere-3.0.0-RC.aar" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.AndroidX.AppCompat">
-      <Version>1.2.0.6</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.RecyclerView">
-      <Version>1.1.0.6</Version>
+    <PackageReference Include="Xamarin.Google.Android.Material">
+      <Version>1.2.1.1</Version>
     </PackageReference>
     <PackageReference Include="Square.Picasso">
       <Version>2.71828.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.AndroidX.ExifInterface">
+      <Version>1.0.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
