--- a/src/Guide.Bindings.Droid/Guide.Bindings.Droid.csproj
+++ b/src/Guide.Bindings.Droid/Guide.Bindings.Droid.csproj
@@ -63,14 +63,6 @@
       <Project>{D1A76DE0-1852-44C0-8C2F-BC965C6418B2}</Project>
       <Name>ConfigurationSDK.Bindings.Droid</Name>
     </ProjectReference>
-    <ProjectReference Include="..\CoreSDK.Bindings.Droid\CoreSDK.Bindings.Droid.csproj">
-      <Project>{55FE998A-3B2B-458C-A0D8-30607AE4D11F}</Project>
-      <Name>CoreSDK.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\JavaCommon.Bindings.Droid\JavaCommon.Bindings.Droid.csproj">
-      <Project>{11F3D9FA-1CF7-4B14-8888-9D531355280C}</Project>
-      <Name>JavaCommon.Bindings.Droid</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Messaging.Bindings.Droid\Messaging.Bindings.Droid.csproj">
       <Project>{DA6AC94D-FC7F-4F6D-91FA-56AA909A581D}</Project>
       <Name>Messaging.Bindings.Droid</Name>
@@ -79,21 +71,22 @@
       <Project>{08BBF496-3AEA-47C6-936C-9AC8F7998D48}</Project>
       <Name>MessagingApi.Bindings.Droid</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SupportProvidersSDK.Bindings.Droid\SupportProvidersSDK.Bindings.Droid.csproj">
-      <Project>{BA2FB740-61E4-4CC8-83C9-A27F1F5C1B2C}</Project>
-      <Name>SupportProvidersSDK.Bindings.Droid</Name>
+    <ProjectReference Include="..\GuideProviders.Bindings.Droid\GuideProviders.Bindings.Droid.csproj">
+      <Project>{5333D4E9-BB5E-490B-B630-6912CE88F1F7}</Project>
+      <Name>GuideProviders.Bindings.Droid</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SupportSDK.Bindings.Droid\SupportSDK.Bindings.Droid.csproj">
-      <Project>{1E07FB4A-A389-4E9E-99E3-9D2594C45867}</Project>
-      <Name>SupportSDK.Bindings.Droid</Name>
+    <ProjectReference Include="..\JavaCommon.Bindings.Droid\JavaCommon.Bindings.Droid.csproj">
+      <Project>{11F3D9FA-1CF7-4B14-8888-9D531355280C}</Project>
+      <Name>JavaCommon.Bindings.Droid</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CoreSDK.Bindings.Droid\CoreSDK.Bindings.Droid.csproj">
+      <Project>{55FE998A-3B2B-458C-A0D8-30607AE4D11F}</Project>
+      <Name>CoreSDK.Bindings.Droid</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Square.Picasso">
-      <Version>2.71828.0</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.Google.Android.Material">
-      <Version>1.2.1.1</Version>
+    <PackageReference Include="Xamarin.AndroidX.Legacy.Support.V4">
+      <Version>1.0.0</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
