--- a/src/Messaging.Bindings.Droid/Messaging.Bindings.Droid.csproj
+++ b/src/Messaging.Bindings.Droid/Messaging.Bindings.Droid.csproj
@@ -63,25 +63,21 @@
       <Project>{076B86E8-6223-47CF-9FFE-5B1020681E0F}</Project>
       <Name>CommonUI.Bindings.Droid</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ConfigurationSDK.Bindings.Droid\ConfigurationSDK.Bindings.Droid.csproj">
-      <Project>{D1A76DE0-1852-44C0-8C2F-BC965C6418B2}</Project>
-      <Name>ConfigurationSDK.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\JavaCommon.Bindings.Droid\JavaCommon.Bindings.Droid.csproj">
-      <Project>{11F3D9FA-1CF7-4B14-8888-9D531355280C}</Project>
-      <Name>JavaCommon.Bindings.Droid</Name>
-    </ProjectReference>
     <ProjectReference Include="..\MessagingApi.Bindings.Droid\MessagingApi.Bindings.Droid.csproj">
       <Project>{08BBF496-3AEA-47C6-936C-9AC8F7998D48}</Project>
       <Name>MessagingApi.Bindings.Droid</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ConfigurationSDK.Bindings.Droid\ConfigurationSDK.Bindings.Droid.csproj">
+      <Project>{D1A76DE0-1852-44C0-8C2F-BC965C6418B2}</Project>
+      <Name>ConfigurationSDK.Bindings.Droid</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Square.Picasso">
-      <Version>2.71828.0</Version>
-    </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.AppCompat">
       <Version>1.2.0.6</Version>
+    </PackageReference>
+    <PackageReference Include="XAB.FlexboxLayout">
+      <Version>2.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
