--- a/src/SupportSDK.Bindings.Droid/SupportSDK.Bindings.Droid.csproj
+++ b/src/SupportSDK.Bindings.Droid/SupportSDK.Bindings.Droid.csproj
@@ -67,14 +67,6 @@
       <Project>{D1A76DE0-1852-44C0-8C2F-BC965C6418B2}</Project>
       <Name>ConfigurationSDK.Bindings.Droid</Name>
     </ProjectReference>
-    <ProjectReference Include="..\CoreSDK.Bindings.Droid\CoreSDK.Bindings.Droid.csproj">
-      <Project>{55FE998A-3B2B-458C-A0D8-30607AE4D11F}</Project>
-      <Name>CoreSDK.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\JavaCommon.Bindings.Droid\JavaCommon.Bindings.Droid.csproj">
-      <Project>{11F3D9FA-1CF7-4B14-8888-9D531355280C}</Project>
-      <Name>JavaCommon.Bindings.Droid</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Suas.Bindings.Droid\Suas.Bindings.Droid.csproj">
       <Project>{89804826-8A1A-4324-BF1E-65621400790E}</Project>
       <Name>Suas.Bindings.Droid</Name>
@@ -83,20 +75,26 @@
       <Project>{BA2FB740-61E4-4CC8-83C9-A27F1F5C1B2C}</Project>
       <Name>SupportProvidersSDK.Bindings.Droid</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Xamarin.AndroidX.AppCompat">
-      <Version>1.2.0.6</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.RecyclerView">
-      <Version>1.1.0.6</Version>
-    </PackageReference>
-    <PackageReference Include="Square.Picasso">
-      <Version>2.71828.0</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.Google.Android.Material">
-      <Version>1.2.1.1</Version>
-    </PackageReference>
+    <ProjectReference Include="..\Guide.Bindings.Droid\Guide.Bindings.Droid.csproj">
+      <Project>{3E0D5FDD-301E-4934-8173-651A96A83838}</Project>
+      <Name>Guide.Bindings.Droid</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MessagingApi.Bindings.Droid\MessagingApi.Bindings.Droid.csproj">
+      <Project>{08BBF496-3AEA-47C6-936C-9AC8F7998D48}</Project>
+      <Name>MessagingApi.Bindings.Droid</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Messaging.Bindings.Droid\Messaging.Bindings.Droid.csproj">
+      <Project>{DA6AC94D-FC7F-4F6D-91FA-56AA909A581D}</Project>
+      <Name>Messaging.Bindings.Droid</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\JavaCommon.Bindings.Droid\JavaCommon.Bindings.Droid.csproj">
+      <Project>{11F3D9FA-1CF7-4B14-8888-9D531355280C}</Project>
+      <Name>JavaCommon.Bindings.Droid</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CoreSDK.Bindings.Droid\CoreSDK.Bindings.Droid.csproj">
+      <Project>{55FE998A-3B2B-458C-A0D8-30607AE4D11F}</Project>
+      <Name>CoreSDK.Bindings.Droid</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
