--- a/azure-pipelines/nuget.yml
+++ b/azure-pipelines/nuget.yml
@@ -7,24 +7,24 @@ variables:
 
 parameters:
   - name: selectedPackage
-    displayName: 'Package for publish (projectName|packageName)'
+    displayName: 'Package for publish (projectName -> packageName)'
     type: string
     default: 'none'
     values:
       - 'none'
-      - 'Belvedere.Bindings.Droid|Softeq.ZendeskBelvedere'
-      - 'BelvedereCore.Bindings.Droid|Softeq.ZendeskBelvedereCore'
-      - 'Suas.Bindings.Droid|Softeq.ZendeskSuas'
-      - 'JavaCommon.Bindings.Droid|Softeq.ZendeskJavaCommon'
-      - 'CommonUI.Bindings.Droid|Softeq.ZendeskCommonUI.Droid'
-      - 'CoreSDK.Bindings.Droid|Softeq.ZendeskCore.Droid'
-      - 'Guide.Bindings.Droid|Softeq.ZendeskGuide.Droid'
-      - 'GuideProviders.Bindings.Droid|Softeq.ZendeskGuideProviders.Droid'
-      - 'Messaging.Bindings.Droid|Softeq.ZendeskMessaging.Droid'
-      - 'MessagingApi.Bindings.Droid|Softeq.ZendeskMessagingAPI.Droid'
-      - 'ConfigurationSDK.Bindings.Droid|Softeq.ZendeskSDKConfigurations.Droid'
-      - 'SupportSDK.Bindings.Droid|Softeq.ZendeskSupport.Droid'
-      - 'SupportProvidersSDK.Bindings.Droid|Softeq.ZendeskSupportProviders.Droid'
+      - 'Belvedere.Bindings.Droid -> Softeq.ZendeskBelvedere'
+      - 'BelvedereCore.Bindings.Droid -> Softeq.ZendeskBelvedereCore'
+      - 'Suas.Bindings.Droid -> Softeq.ZendeskSuas'
+      - 'JavaCommon.Bindings.Droid -> Softeq.ZendeskJavaCommon'
+      - 'CommonUI.Bindings.Droid -> Softeq.ZendeskCommonUI.Droid'
+      - 'CoreSDK.Bindings.Droid -> Softeq.ZendeskCore.Droid'
+      - 'Guide.Bindings.Droid -> Softeq.ZendeskGuide.Droid'
+      - 'GuideProviders.Bindings.Droid -> Softeq.ZendeskGuideProviders.Droid'
+      - 'Messaging.Bindings.Droid -> Softeq.ZendeskMessaging.Droid'
+      - 'MessagingApi.Bindings.Droid -> Softeq.ZendeskMessagingAPI.Droid'
+      - 'ConfigurationSDK.Bindings.Droid -> Softeq.ZendeskSDKConfigurations.Droid'
+      - 'SupportSDK.Bindings.Droid -> Softeq.ZendeskSupport.Droid'
+      - 'SupportProvidersSDK.Bindings.Droid -> Softeq.ZendeskSupportProviders.Droid'
 
 jobs:
 - job: macOS
@@ -34,7 +34,7 @@ jobs:
   - bash: sudo $AGENT_HOMEDIRECTORY/scripts/select-xamarin-sdk.sh $(MONO_VERSION)
     displayName: Switch to the latest Xamarin SDK
   - bash: |
-      ARR=(${selectedPackage//|/ }) # split parameter value
+      ARR=(${selectedPackage// -> / }) # split parameter value
 
       PROJECT_NAME=${ARR[0]}
       echo "Run for project: $PROJECT_NAME"
@@ -44,7 +44,7 @@ jobs:
       echo "Package for publish: $PACKAGE_NAME"
       echo "##vso[task.setvariable variable=packageName]$PACKAGE_NAME"      
 
-  - script: 'msbuild $(projectName)/$(projectName).csproj -t:rebuild /p:Configuration=$(BuildConfiguration)'
+  - script: 'msbuild src/$(projectName)/$(projectName).csproj -t:rebuild /p:Configuration=$(BuildConfiguration)'
     displayName: Build library
   - script: 'nuget pack nuget/$(packageName).nuspec'
     displayName: Pack library
