--- a/nuget/Softeq.ZendeskGuide.Droid.nuspec
+++ b/nuget/Softeq.ZendeskGuide.Droid.nuspec
@@ -30,7 +30,7 @@
                 <dependency id="Xamarin.AndroidX.CardView" version="1.0.0.16" />
                 <dependency id="Xamarin.AndroidX.Core" version="1.3.2.3" />
                 <dependency id="Xamarin.AndroidX.Fragment" version="1.2.5.5" />
-                <dependency id="Xamarin.AndroidX.Legacy.Support" version="V4/1.0.0" />
+                <dependency id="Xamarin.AndroidX.Legacy.Support.V4" version="1.0.0" />
                 <dependency id="Xamarin.AndroidX.RecyclerView" version="1.2.1.7" />
                 <dependency id="Xamarin.Google.Android.Material" version="1.4.0.6" />
                 <dependency id="Xamarin.Google.Dagger" version="2.41.0.2" />
