--- a/nuget/Softeq.ZendeskChatVisitorClient.Droid.nuspec
+++ b/nuget/Softeq.ZendeskChatVisitorClient.Droid.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Softeq.ZendeskChatVisitorClient.Droid</id>
-        <version>8.3.3.1</version>
+        <version>8.3.3.3</version>
         <authors>Softeq Development Corp.</authors>
         <owners>Softeq Development Corp.</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -17,8 +17,8 @@
         <tags>zendesk, xamarin.android, softeq, android</tags>
         <dependencies>
             <group targetFramework="monoandroid12.0">
-                <dependency id="Softeq.ZendeskChatSocketClient.Droid" version="6.1.3.1" />
-                <dependency id="Softeq.ZendeskJavaCommon" version="2.0.0.1" />
+                <dependency id="Softeq.ZendeskChatSocketClient.Droid" version="6.1.3.3" />
+                <dependency id="Softeq.ZendeskJavaCommon" version="2.0.0.3" />
 
                 <dependency id="GoogleGson" version="2.8.9.3" />
                 <dependency id="Square.OkHttp3.LoggingInterceptor" version="4.4.1" />
@@ -31,6 +31,6 @@
         </dependencies>
     </metadata>
     <files>
-        <file src="../src/ChatSocketClient.Bindings.Droid/bin/Release/ChatSocketClient.Bindings.Droid.dll" target="lib/monoandroid12.0/ChatSocketClient.Bindings.Droid.dll" />
+        <file src="../src/ChatVisitorClient.Bindings.Droid/bin/Release/ChatVisitorClient.Bindings.Droid.dll" target="lib/monoandroid12.0/ChatVisitorClient.Bindings.Droid.dll" />
     </files>
 </package>
