--- a/tools/TestZendeskNative/app/build.gradle
+++ b/tools/TestZendeskNative/app/build.gradle
@@ -3,13 +3,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 33
     buildToolsVersion "29.0.3"
 
     defaultConfig {
         applicationId "com.example.testzendesknative"
-        minSdkVersion 16
-        targetSdkVersion 30
+        minSdkVersion 21
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
 
@@ -32,7 +32,8 @@ apply plugin: 'project-report'
 
 dependencies {
 
-    implementation group: 'com.zendesk', name: 'support', version: '5.0.2'
+    implementation group: 'com.zendesk', name: 'chat', version: '3.3.6'
+    implementation group: 'com.zendesk', name: 'support', version: '5.1.0'
 
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
