--- a/src/Messaging.Bindings.Droid/Messaging.Bindings.Droid.csproj
+++ b/src/Messaging.Bindings.Droid/Messaging.Bindings.Droid.csproj
@@ -83,29 +83,17 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Square.OkHttp3">
-      <Version>4.9.2.3</Version>
-    </PackageReference>
     <PackageReference Include="Square.Picasso">
       <Version>2.8.0.5</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Google.Android.Flexbox">
-      <Version>3.0.0.1</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.Annotation">
-      <Version>1.3.0.4</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.Core">
-      <Version>1.3.2.3</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.Fragment">
-      <Version>1.2.5.5</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.RecyclerView">
-      <Version>1.2.1.7</Version>
+    <PackageReference Include="Xamarin.AndroidX.AppCompat">
+      <Version>1.0.2.1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Google.Android.Material">
       <Version>1.4.0.6</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Android.Google.Android.Flexbox">
+      <Version>3.0.0.1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Google.Dagger">
       <Version>2.41.0.2</Version>
