--- a/azure-pipelines/templates/vars.yml
+++ b/azure-pipelines/templates/vars.yml
@@ -1,5 +1,4 @@
 variables:
-  MONO_VERSION: 6_12_20
-  XCODE_VERSION: 14.0.1
+  DOTNET_SDK_VERSION: 6.0.405
   BuildConfiguration: 'Release'
   MACOS_VM_IMAGE: 'macos-12'
