--- a/src/Messaging.Bindings.Droid/Messaging.Bindings.Droid.csproj
+++ b/src/Messaging.Bindings.Droid/Messaging.Bindings.Droid.csproj
@@ -1,106 +1,43 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{DA6AC94D-FC7F-4F6D-91FA-56AA909A581D}</ProjectGuid>
-    <ProjectTypeGuids>{10368E6C-D01B-4462-8E8B-01FC667A7035};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <TemplateGuid>{77efb91c-a7e9-4b0e-a7c5-31eeec3c6d46}</TemplateGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Messaging.Bindings.Droid</RootNamespace>
-    <AssemblyName>Messaging.Bindings.Droid</AssemblyName>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>True</Deterministic>
-    <TargetFrameworkVersion>v12.0</TargetFrameworkVersion>
-    <AndroidClassParser>class-parse</AndroidClassParser>
-    <AndroidCodegenTarget>XAJavaInterop1</AndroidCodegenTarget>
-    <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
+    <TargetFramework>net6.0-android</TargetFramework>
+    <SupportedOSPlatformVersion>21</SupportedOSPlatformVersion>
+
+    <!-- Assembly & NuGet Info -->
+    <Title>ZendeskMessaging</Title>
+    <Description>Xamarin.Android binding library for Zendesk Messaging SDK</Description>
+    <Company>Softeq Development Corporation</Company>
+    <Copyright>Copyright © 2023 Softeq Development Corporation</Copyright>
+    <Version>5.2.5.1</Version>
+    <Authors>Softeq Development Corp.</Authors>
+    <Owners>Softeq Development Corp.</Owners>
+    <PackageId>Softeq.ZendeskMessaging.Droid</PackageId>
+    <PackageIcon>icon.png</PackageIcon>
+    <PackageProjectUrl>https://github.com/Softeq/Zendesk-xamarin-android</PackageProjectUrl>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <PackageTags>zendesk;android;xamarin;binding;softeq;library</PackageTags>
+    <PackageReleaseNotes>Migration to .NET6</PackageReleaseNotes>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>portable</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <LangVersion>latest</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>portable</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <LangVersion>latest</LangVersion>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="Mono.Android" />
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml" />
+    <None Include="../../LICENSE.txt" Visible="False" Pack="true" PackagePath="" />
+    <None Include="../../images/icon.png" Pack="true" PackagePath="" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="Additions\Additions.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <ProjectReference Include="..\Belvedere.Bindings.Droid\Belvedere.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\BelvedereCore.Bindings.Droid\BelvedereCore.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\CommonUI.Bindings.Droid\CommonUI.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\ConfigurationSDK.Bindings.Droid\ConfigurationSDK.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\MessagingApi.Bindings.Droid\MessagingApi.Bindings.Droid.csproj" />
   </ItemGroup>
+
   <ItemGroup>
-    <None Include="Additions\AboutAdditions.txt" />
+    <PackageReference Include="Square.Picasso" Version="2.8.0.5" />
+    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.3.1.5" />
+    <PackageReference Include="Xamarin.Google.Android.Material" Version="1.4.0.6" />
+    <PackageReference Include="Xamarin.Android.Google.Android.Flexbox" Version="3.0.0.1" />
+    <PackageReference Include="Xamarin.Google.Dagger" Version="2.41.0.2" />
+    <PackageReference Include="Xamarin.Kotlin.StdLib.Jdk8" Version="1.6.10" />
   </ItemGroup>
-  <ItemGroup>
-    <TransformFile Include="Transforms\Metadata.xml" />
-    <TransformFile Include="Transforms\EnumFields.xml" />
-    <TransformFile Include="Transforms\EnumMethods.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <LibraryProjectZip Include="Jars\messaging-5.2.5.aar" />
-    <JavaSourceJar Include="Jars\messaging-5.2.5-sources.jar" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Belvedere.Bindings.Droid\Belvedere.Bindings.Droid.csproj">
-      <Project>{45775a06-4d52-491e-a6db-90009a775e36}</Project>
-      <Name>Belvedere.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\BelvedereCore.Bindings.Droid\BelvedereCore.Bindings.Droid.csproj">
-      <Project>{8a93f976-d4d1-4160-99cb-03576ebe4fb0}</Project>
-      <Name>BelvedereCore.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CommonUI.Bindings.Droid\CommonUI.Bindings.Droid.csproj">
-      <Project>{076B86E8-6223-47CF-9FFE-5B1020681E0F}</Project>
-      <Name>CommonUI.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ConfigurationSDK.Bindings.Droid\ConfigurationSDK.Bindings.Droid.csproj">
-      <Project>{d1a76de0-1852-44c0-8c2f-bc965c6418b2}</Project>
-      <Name>ConfigurationSDK.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MessagingApi.Bindings.Droid\MessagingApi.Bindings.Droid.csproj">
-      <Project>{08BBF496-3AEA-47C6-936C-9AC8F7998D48}</Project>
-      <Name>MessagingApi.Bindings.Droid</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Square.Picasso">
-      <Version>2.8.0.5</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.AppCompat">
-      <Version>1.0.2.1</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.Google.Android.Material">
-      <Version>1.4.0.6</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.Android.Google.Android.Flexbox">
-      <Version>3.0.0.1</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.Google.Dagger">
-      <Version>2.41.0.2</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.Kotlin.StdLib.Jdk8">
-      <Version>1.6.10</Version>
-    </PackageReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
 </Project>
