--- a/src/SupportSDK.Bindings.Droid/SupportSDK.Bindings.Droid.csproj
+++ b/src/SupportSDK.Bindings.Droid/SupportSDK.Bindings.Droid.csproj
@@ -1,137 +1,52 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{1E07FB4A-A389-4E9E-99E3-9D2594C45867}</ProjectGuid>
-    <ProjectTypeGuids>{10368E6C-D01B-4462-8E8B-01FC667A7035};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <TemplateGuid>{77efb91c-a7e9-4b0e-a7c5-31eeec3c6d46}</TemplateGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SupportSDK.Bindings.Droid</RootNamespace>
-    <AssemblyName>SupportSDK.Bindings.Droid</AssemblyName>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>True</Deterministic>
-    <TargetFrameworkVersion>v12.0</TargetFrameworkVersion>
-    <AndroidClassParser>class-parse</AndroidClassParser>
-    <AndroidCodegenTarget>XAJavaInterop1</AndroidCodegenTarget>
-    <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
+    <TargetFramework>net6.0-android</TargetFramework>
+    <SupportedOSPlatformVersion>21</SupportedOSPlatformVersion>
+
+    <!-- Assembly & NuGet Info -->
+    <Title>ZendeskSupport</Title>
+    <Description>Xamarin.Android binding library for Zendesk Support SDK</Description>
+    <Company>Softeq Development Corporation</Company>
+    <Copyright>Copyright © 2023 Softeq Development Corporation</Copyright>
+    <Version>5.1.0.1</Version>
+    <Authors>Softeq Development Corp.</Authors>
+    <Owners>Softeq Development Corp.</Owners>
+    <PackageId>Softeq.ZendeskSupport.Droid</PackageId>
+    <PackageIcon>icon.png</PackageIcon>
+    <PackageProjectUrl>https://github.com/Softeq/Zendesk-xamarin-android</PackageProjectUrl>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <PackageTags>zendesk;android;xamarin;binding;softeq;library</PackageTags>
+    <PackageReleaseNotes>Migration to .NET6</PackageReleaseNotes>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <LangVersion>latest</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>portable</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <LangVersion>latest</LangVersion>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="Mono.Android" />
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml" />
+    <None Include="../../LICENSE.txt" Visible="False" Pack="true" PackagePath="" />
+    <None Include="../../images/icon.png" Pack="true" PackagePath="" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="Additions\Additions.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <ProjectReference Include="..\Belvedere.Bindings.Droid\Belvedere.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\BelvedereCore.Bindings.Droid\BelvedereCore.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\ConfigurationSDK.Bindings.Droid\ConfigurationSDK.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\SupportProvidersSDK.Bindings.Droid\SupportProvidersSDK.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\Guide.Bindings.Droid\Guide.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\MessagingApi.Bindings.Droid\MessagingApi.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\Messaging.Bindings.Droid\Messaging.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\JavaCommon.Bindings.Droid\JavaCommon.Bindings.Droid.csproj" />
+    <ProjectReference Include="..\CoreSDK.Bindings.Droid\CoreSDK.Bindings.Droid.csproj" />
   </ItemGroup>
+
   <ItemGroup>
-    <None Include="Additions\AboutAdditions.txt" />
+    <PackageReference Include="GoogleGson" Version="2.8.9.3" />
+    <PackageReference Include="Square.Picasso" Version="2.8.0.5" />
+    <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.3.1.5" />
+    <PackageReference Include="Xamarin.AndroidX.CardView" Version="1.0.0.16" />
+    <PackageReference Include="Xamarin.AndroidX.Legacy.Support.V4" Version="1.0.0" />
+    <PackageReference Include="Xamarin.AndroidX.MultiDex" Version="2.0.1.13" />
+    <PackageReference Include="Xamarin.AndroidX.RecyclerView" Version="1.2.1.7" />
+    <PackageReference Include="Xamarin.Google.Android.Material" Version="1.4.0.6" />
+    <PackageReference Include="Xamarin.Google.Dagger" Version="2.41.0.2" />
+    <PackageReference Include="Xamarin.Jakewharton.DiskLruCache" Version="2.0.2.6" />
+    <PackageReference Include="Xamarin.Kotlin.StdLib.Jdk8" Version="1.6.10" />
   </ItemGroup>
-  <ItemGroup>
-    <TransformFile Include="Transforms\Metadata.xml" />
-    <TransformFile Include="Transforms\EnumFields.xml" />
-    <TransformFile Include="Transforms\EnumMethods.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <LibraryProjectZip Include="Jars\support-5.1.0.aar" />
-    <JavaSourceJar Include="Jars\support-5.1.0-sources.jar" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Belvedere.Bindings.Droid\Belvedere.Bindings.Droid.csproj">
-      <Project>{45775A06-4D52-491E-A6DB-90009A775E36}</Project>
-      <Name>Belvedere.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\BelvedereCore.Bindings.Droid\BelvedereCore.Bindings.Droid.csproj">
-      <Project>{8a93f976-d4d1-4160-99cb-03576ebe4fb0}</Project>
-      <Name>BelvedereCore.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ConfigurationSDK.Bindings.Droid\ConfigurationSDK.Bindings.Droid.csproj">
-      <Project>{D1A76DE0-1852-44C0-8C2F-BC965C6418B2}</Project>
-      <Name>ConfigurationSDK.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SupportProvidersSDK.Bindings.Droid\SupportProvidersSDK.Bindings.Droid.csproj">
-      <Project>{BA2FB740-61E4-4CC8-83C9-A27F1F5C1B2C}</Project>
-      <Name>SupportProvidersSDK.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Guide.Bindings.Droid\Guide.Bindings.Droid.csproj">
-      <Project>{3E0D5FDD-301E-4934-8173-651A96A83838}</Project>
-      <Name>Guide.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MessagingApi.Bindings.Droid\MessagingApi.Bindings.Droid.csproj">
-      <Project>{08BBF496-3AEA-47C6-936C-9AC8F7998D48}</Project>
-      <Name>MessagingApi.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Messaging.Bindings.Droid\Messaging.Bindings.Droid.csproj">
-      <Project>{DA6AC94D-FC7F-4F6D-91FA-56AA909A581D}</Project>
-      <Name>Messaging.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\JavaCommon.Bindings.Droid\JavaCommon.Bindings.Droid.csproj">
-      <Project>{11F3D9FA-1CF7-4B14-8888-9D531355280C}</Project>
-      <Name>JavaCommon.Bindings.Droid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CoreSDK.Bindings.Droid\CoreSDK.Bindings.Droid.csproj">
-      <Project>{55FE998A-3B2B-458C-A0D8-30607AE4D11F}</Project>
-      <Name>CoreSDK.Bindings.Droid</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="GoogleGson">
-      <Version>2.8.9.3</Version>
-    </PackageReference>
-    <PackageReference Include="Square.Picasso">
-      <Version>2.8.0.5</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.AppCompat">
-      <Version>1.3.1.5</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.CardView">
-      <Version>1.0.0.16</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.Legacy.Support.V4">
-      <Version>1.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.MultiDex">
-      <Version>2.0.1.13</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.RecyclerView">
-      <Version>1.2.1.7</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.Google.Android.Material">
-      <Version>1.4.0.6</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.Google.Dagger">
-      <Version>2.41.0.2</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.Jakewharton.DiskLruCache">
-      <Version>2.0.2.6</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.Kotlin.StdLib.Jdk8">
-      <Version>1.6.10</Version>
-    </PackageReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
 </Project>
